Fonts and Audio Added

--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -7,6 +7,11 @@
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="pokemon.ttf">
+            <string>PokemonSolidNormal</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -18,9 +23,38 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QGk-Na-NvX">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="110"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RWR-OR-1Yh">
+                                        <rect key="frame" x="142" y="56" width="130" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="130" id="3rF-fW-U4T"/>
+                                            <constraint firstAttribute="height" constant="34" id="MlZ-5a-zIc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="32"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                        <color key="shadowColor" white="0.0" alpha="0.75039764220000005" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <size key="shadowOffset" width="0.0" height="3"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bVf-BJ-Izu">
+                                        <rect key="frame" x="366" y="53" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="m7M-bA-BoI"/>
+                                            <constraint firstAttribute="height" constant="40" id="rGr-ht-L59"/>
+                                        </constraints>
+                                        <state key="normal" image="music"/>
+                                        <connections>
+                                            <action selector="musicBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QHa-ye-ZQB"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="RWR-OR-1Yh" secondAttribute="bottom" constant="20" id="2s4-aJ-oDx"/>
+                                    <constraint firstAttribute="bottom" secondItem="bVf-BJ-Izu" secondAttribute="bottom" constant="17" id="7av-Ue-eGP"/>
                                     <constraint firstAttribute="height" constant="110" id="f11-RG-C1i"/>
+                                    <constraint firstAttribute="trailing" secondItem="bVf-BJ-Izu" secondAttribute="trailing" constant="8" id="hCJ-FQ-HJ0"/>
+                                    <constraint firstItem="RWR-OR-1Yh" firstAttribute="centerX" secondItem="QGk-Na-NvX" secondAttribute="centerX" id="l9L-G0-Nin"/>
                                 </constraints>
                             </view>
                             <searchBar contentMode="redraw" placeholder="Search for a Pokemon" translatesAutoresizingMaskIntoConstraints="NO" id="VfG-Gr-tlK">
@@ -116,6 +150,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="musicBtn" destination="bVf-BJ-Izu" id="2nB-Tg-5KS"/>
                         <outlet property="myCollectionView" destination="Eaw-FM-tGt" id="Oan-Z5-mFN"/>
                     </connections>
                 </viewController>
@@ -127,5 +162,6 @@
     <resources>
         <image name="4" width="120" height="120"/>
         <image name="BG" width="1920" height="1200"/>
+        <image name="music" width="100" height="100"/>
     </resources>
 </document>
